kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: redemption-service
  namespace: redemption

spec:

  replicas: 3

  selector:
    matchLabels:
      app: redemption-service


  strategy:

    type: RollingUpdate

    rollingUpdate:

      maxUnavailable: 0

      maxSurge: 1


  template:

    metadata:

      labels:

        app: redemption-service


    spec:

      containers:

      - name: redemption-api

        image: nginx:latest


        ports:

        - containerPort: 80


        resources:

          requests:

            cpu: "250m"

            memory: "256Mi"


          limits:

            cpu: "500m"

            memory: "512Mi"


        readinessProbe:

          httpGet:

            path: /

            port: 80


          initialDelaySeconds: 5

          periodSeconds: 10


        livenessProbe:

          httpGet:

            path: /

            port: 80


          initialDelaySeconds: 15

          periodSeconds: 20
