kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: redemption-service
  namespace: redemption

spec:

  selector:
    app: redemption-service


  ports:

  - port: 80
    targetPort: 80


  type: ClusterIP
