kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: redemption-ingress
  namespace: redemption

spec:

  ingressClassName: traefik

  rules:

  - host: redemption.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: redemption-service

            port:

              number: 80
